--- a/Secciones/contacto.html
+++ b/Secciones/contacto.html
@@ -10,7 +10,7 @@
         <nav>
         <img src="Img/Logo/Logo.png" alt="Yunque.Roble Logo" class="logo">
         <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/index.html">Inicio</a></li>
             <li><a href="sobreMi.html">Sobre mí</a></li>
             <li><a href="proyectos.html">Proyectos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
