--- a/Secciones/sobreMi.html
+++ b/Secciones/sobreMi.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yunque.Roble</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
-        <nav>
-        <img src="Img/Logo/Logo.png" alt="Yunque.Roble Logo" class="logo">
+    <nav>
+        <img src="/Img/Logo/Logo.png" alt="Yunque.Roble Logo" class="logo">
         <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/index.html">Inicio</a></li>
             <li><a href="sobreMi.html">Sobre mí</a></li>
             <li><a href="proyectos.html">Proyectos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
+        <h1>Yunque.Roble</h1>
     </nav>
-    <h1>Yunque.Roble</h1>
+    
     <h2>Puto S </h2>
     <section>
         
