--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yunque.Roble</title>
+    <title>Cedro.Yunque</title>
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <nav>
+      <h1>Cedro.Yunque</h1>
       <img src="Img/Logo/Logo.png" alt="Yunque.Roble Logo" class="logo" />
       <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="about.html">Sobre mí</a></li>
-        <li><a href="projects.html">Proyectos</a></li>
-        <li><a href="contact.html">Contacto</a></li>
+        <li><a href="Secciones/sobreMi.html">Sobre mí</a></li>
+        <li><a href="Secciones/proyectos.html">Proyectos</a></li>
+        <li><a href="Secciones/contacto.html">Contacto</a></li>
       </ul>
     </nav>
-    <h1>Yunque.Roble</h1>
+    
     <h2>Puto S</h2>
     <section>
 
